// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOrders > default 1`] = `
{
  "nextCursor": "0x9",
  "orders": [
    {
      "amount": 230000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 39n,
      "orderId": 19n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 230000000n,
      "tick": 800,
    },
    {
      "amount": 430000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 39n,
      "prev": 19n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 430000000n,
      "tick": 800,
    },
    {
      "amount": 210000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 37n,
      "orderId": 17n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 210000000n,
      "tick": 600,
    },
    {
      "amount": 410000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 37n,
      "prev": 17n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 410000000n,
      "tick": 600,
    },
    {
      "amount": 190000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 35n,
      "orderId": 15n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 190000000n,
      "tick": 400,
    },
    {
      "amount": 390000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 35n,
      "prev": 15n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 390000000n,
      "tick": 400,
    },
    {
      "amount": 170000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 33n,
      "orderId": 13n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 170000000n,
      "tick": 200,
    },
    {
      "amount": 370000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 33n,
      "prev": 13n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 370000000n,
      "tick": 200,
    },
    {
      "amount": 150000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 31n,
      "orderId": 11n,
      "prev": 0n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 150000000n,
      "tick": 0,
    },
    {
      "amount": 350000000n,
      "baseToken": "0x20c0000000000000000000000000000000000005",
      "flipTick": 0,
      "isBid": true,
      "isFlip": false,
      "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "next": 0n,
      "orderId": 31n,
      "prev": 11n,
      "quoteToken": "0x20c0000000000000000000000000000000000004",
      "remaining": 350000000n,
      "tick": 0,
    },
  ],
}
`;

exports[`getOrders > infiniteQueryOptions > default 1`] = `
{
  "pageParams": [
    undefined,
    "0x23",
  ],
  "pages": [
    {
      "nextCursor": "0x23",
      "orders": [
        {
          "amount": 230000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 39n,
          "orderId": 19n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 230000000n,
          "tick": 800,
        },
        {
          "amount": 430000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 39n,
          "prev": 19n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 430000000n,
          "tick": 800,
        },
        {
          "amount": 210000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 37n,
          "orderId": 17n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 210000000n,
          "tick": 600,
        },
        {
          "amount": 410000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 37n,
          "prev": 17n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 410000000n,
          "tick": 600,
        },
        {
          "amount": 190000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 35n,
          "orderId": 15n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 190000000n,
          "tick": 400,
        },
      ],
    },
    {
      "nextCursor": "0x9",
      "orders": [
        {
          "amount": 390000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 35n,
          "prev": 15n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 390000000n,
          "tick": 400,
        },
        {
          "amount": 170000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 33n,
          "orderId": 13n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 170000000n,
          "tick": 200,
        },
        {
          "amount": 370000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 33n,
          "prev": 13n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 370000000n,
          "tick": 200,
        },
        {
          "amount": 150000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 31n,
          "orderId": 11n,
          "prev": 0n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 150000000n,
          "tick": 0,
        },
        {
          "amount": 350000000n,
          "baseToken": "0x20c0000000000000000000000000000000000005",
          "flipTick": 0,
          "isBid": true,
          "isFlip": false,
          "maker": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
          "next": 0n,
          "orderId": 31n,
          "prev": 11n,
          "quoteToken": "0x20c0000000000000000000000000000000000004",
          "remaining": 350000000n,
          "tick": 0,
        },
      ],
    },
  ],
}
`;
